[gd_scene load_steps=5 format=3 uid="uid://bw0vj1wg1lonw"]

[ext_resource type="Script" path="res://character/PlayerUi.gd" id="1_kd4oi"]
[ext_resource type="PackedScene" uid="uid://c7rgs1j8cueln" path="res://character/item_presenter.tscn" id="2_574tx"]
[ext_resource type="Texture2D" uid="uid://yxjr8t2fqn24" path="res://urizen-onebit-tileset.png" id="3_kjph0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xy83u"]
resource_local_to_scene = true
atlas = ExtResource("3_kjph0")
region = Rect2(79, 66, 12, 12)

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_kd4oi")

[node name="ItemsList" type="HBoxContainer" parent="."]
offset_right = 44.0
offset_bottom = 12.0

[node name="ItemPresenter" parent="ItemsList" instance=ExtResource("2_574tx")]
layout_mode = 2

[node name="TextureRect" parent="ItemsList/ItemPresenter" index="1"]
texture = SubResource("AtlasTexture_xy83u")

[node name="ItemPresenter2" parent="ItemsList" instance=ExtResource("2_574tx")]
layout_mode = 2

[node name="ItemPresenter3" parent="ItemsList" instance=ExtResource("2_574tx")]
layout_mode = 2

[node name="EnergyBar" type="ProgressBar" parent="."]
offset_left = 995.0
offset_top = 13.0
offset_right = 1137.0
offset_bottom = 40.0

[editable path="ItemsList/ItemPresenter"]
